界面大小改变处理，窗口闪烁有 BUG

--- a/ChatRoom/TimberWolf/TimberWolf/TimberWolf/TimberWolf.rc
+++ b/ChatRoom/TimberWolf/TimberWolf/TimberWolf/TimberWolf.rc
@@ -84,30 +84,30 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_BLACKFRAME | SS_SUNKEN,3,115,168,1
 END
 
-IDD_TIMBERWOLF_DIALOG DIALOGEX 0, 0, 517, 369
-STYLE DS_SETFONT | DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+IDD_TIMBERWOLF_DIALOG DIALOGEX 0, 0, 518, 369
+STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "TimberWolf"
 FONT 9, "宋体", 0, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_RICHEDIT_SEND,"RichEdit20A",ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP,3,295,361,47
+    CONTROL         "",IDC_RICHEDIT_SEND,"RichEdit20A",ES_MULTILINE | ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP,3,295,362,47
     PUSHBUTTON      "发送",IDC_SEND_MSG,315,343,50,23
     PUSHBUTTON      "主菜单",IDC_MAIN,3,3,52,16,BS_FLAT,WS_EX_STATICEDGE
     PUSHBUTTON      "文件共享列表",IDC_FILE_SHARE,278,3,87,16
-    CONTROL         "",IDC_RICHEDIT_GROUP,"RichEdit20A",ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP,3,20,363,171
-    LTEXT           "你对",IDC_STATIC,3,193,25,10
+    CONTROL         "",IDC_RICHEDIT_GROUP,"RichEdit20A",ES_MULTILINE | ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP,3,20,363,171
+    LTEXT           "你对",IDC_STATIC_YOU_TOWARD,3,193,25,10
     COMBOBOX        IDC_COMBO_SELECT_CHAT,29,192,120,140,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "说：",IDC_STATIC,150,193,25,10
-    CONTROL         "",IDC_RICHEDIT_PRIVATE,"RichEdit20A",ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP,3,205,362,65
+    LTEXT           "说：",IDC_STATIC_SAY,150,193,25,10
+    CONTROL         "",IDC_RICHEDIT_PRIVATE,"RichEdit20A",ES_MULTILINE | ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP,3,205,363,65
     PUSHBUTTON      "发送图片",IDC_SEND_PIC,3,271,62,23
     PUSHBUTTON      "字体",IDC_SET_FONT,65,271,25,23
-    LTEXT           "定时滚动广告栏...",IDC_STATIC,3,352,149,14
+    LTEXT           "定时滚动广告栏...",IDC_STATIC_SCROLL_AD,3,352,149,14
     PUSHBUTTON      "关闭",IDC_EXIT,277,350,34,16
-    CONTROL         "",IDC_STATIC,"Static",SS_BLACKFRAME | SS_SUNKEN,368,3,4,363
-    LTEXT           "公告栏：",IDC_STATIC,375,3,67,9
-    CONTROL         "",IDC_RICHEDIT_PUBLIC,"RichEdit20A",ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP,374,13,140,91
-    LTEXT           "成员列表(200/200)：",IDC_STATIC,375,107,78,9
-    CONTROL         "",IDC_LIST_MEMBER,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,374,119,140,247
+    LTEXT           "公告栏：",IDC_STATIC_PUBLIC,375,3,67,9
+    CONTROL         "",IDC_RICHEDIT_PUBLIC,"RichEdit20A",ES_MULTILINE | ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP,375,13,140,91
+    LTEXT           "成员列表(200/200)：",IDC_STATIC_MEMBER_LIST,375,107,78,9
+    CONTROL         "",IDC_LIST_MEMBER,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,375,119,140,247
+    PUSHBUTTON      "",IDC_PANEL_SEPARATOR,366,3,8,363,0,WS_EX_STATICEDGE
 END
 
 IDD_LOGON DIALOGEX 0, 0, 234, 98
@@ -137,7 +137,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "下载",IDOK,3,171,50,14
     PUSHBUTTON      "退出",IDCANCEL,231,171,50,14
-    CONTROL         "",IDC_LIST_FILE_SHARE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,3,3,278,167
+    CONTROL         "",IDC_LIST_FILE_SHARE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,3,3,278,167,WS_EX_DLGMODALFRAME
     PUSHBUTTON      "删除",IDC_DELETE_SHARE,155,171,50,14
     PUSHBUTTON      "共享",IDC_SHARE,79,171,50,14
 END
@@ -209,7 +209,7 @@ BEGIN
     IDD_TIMBERWOLF_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 3
-        RIGHTMARGIN, 514
+        RIGHTMARGIN, 515
         TOPMARGIN, 3
         BOTTOMMARGIN, 366
     END
