--- a/ChatRoom/TimberWolf/TimberWolf/TimberWolf/TimberWolf.rc
+++ b/ChatRoom/TimberWolf/TimberWolf/TimberWolf/TimberWolf.rc
@@ -85,7 +85,7 @@ BEGIN
 END
 
 IDD_TIMBERWOLF_DIALOG DIALOGEX 0, 0, 518, 369
-STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_SETFONT | DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "TimberWolf"
 FONT 9, "宋体", 0, 0, 0x1
@@ -117,7 +117,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     EDITTEXT        IDC_EDIT4,56,36,111,14,ES_AUTOHSCROLL
     LTEXT           "账号：",IDC_STATIC,15,37,38,11
-    EDITTEXT        IDC_EDIT1,56,52,111,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT1,56,52,111,14,ES_PASSWORD | ES_AUTOHSCROLL
     LTEXT           "密码：",IDC_STATIC,15,55,38,11
     CONTROL         "自动登录",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,61,81,48,10
     CONTROL         "记住密码",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,115,81,48,10
@@ -126,13 +126,13 @@ BEGIN
     PUSHBUTTON      "取消",IDCANCEL,203,73,28,23
     LTEXT           "注册新账号",IDC_STATIC,173,3,48,12
     LTEXT           "忘记密码？",IDC_STATIC,173,19,49,12
-    ICON            IDR_MAINFRAME,IDC_STATIC,17,11,21,20
-    ICON            IDI_ICON_HELLO,IDC_STATIC,80,10,21,20
+    ICON            IDR_MAINFRAME,IDC_STATIC,17,11,20,20
+    ICON            IDI_ICON_HELLO,IDC_STATIC,80,10,20,20
 END
 
 IDD_FILE_SHARE DIALOGEX 0, 0, 284, 188
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+CAPTION "文件共享"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "下载",IDOK,3,171,50,14
@@ -143,11 +143,26 @@ BEGIN
 END
 
 IDD_PIC_LIST DIALOGEX 0, 0, 242, 122
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_BORDER | WS_SYSMENU
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_BORDER | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LIST_PIC,"SysListView32",LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,0,0,242,95
     PUSHBUTTON      "Button1",IDC_BUTTON1,173,101,50,14
+END
+
+IDD_SETTING DIALOGEX 0, 0, 297, 205
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "设置 ..."
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,244,188,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,129,188,50,14
+    PUSHBUTTON      "Button1",IDC_BUTTON1,186,188,50,14
+    PUSHBUTTON      "Button3",IDC_BUTTON3,3,3,50,14
+    PUSHBUTTON      "Button3",IDC_BUTTON4,3,17,50,14
+    PUSHBUTTON      "Button3",IDC_BUTTON5,3,32,50,14
+    PUSHBUTTON      "Button3",IDC_BUTTON6,3,46,50,14
+    PUSHBUTTON      "Button3",IDC_BUTTON7,3,61,50,14
 END
 
 
@@ -228,6 +243,14 @@ BEGIN
         RIGHTMARGIN, 281
         TOPMARGIN, 3
         BOTTOMMARGIN, 185
+    END
+
+    IDD_SETTING, DIALOG
+    BEGIN
+        LEFTMARGIN, 3
+        RIGHTMARGIN, 294
+        TOPMARGIN, 3
+        BOTTOMMARGIN, 202
     END
 END
 #endif    // APSTUDIO_INVOKED
