--- a/ChatRoom/TimberWolf/TimberWolf/TimberWolf/TimberWolf.rc
+++ b/ChatRoom/TimberWolf/TimberWolf/TimberWolf/TimberWolf.rc
@@ -110,24 +110,25 @@ BEGIN
     PUSHBUTTON      "",IDC_PANEL_SEPARATOR,366,3,8,363,0,WS_EX_STATICEDGE
 END
 
-IDD_LOGON DIALOGEX 0, 0, 234, 98
+IDD_LOGON DIALOGEX 0, 0, 227, 98
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "  登录"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDIT4,56,36,111,14,ES_AUTOHSCROLL
-    LTEXT           "账号：",IDC_STATIC,15,37,38,11
-    EDITTEXT        IDC_EDIT1,56,52,111,14,ES_PASSWORD | ES_AUTOHSCROLL
-    LTEXT           "密码：",IDC_STATIC,15,55,38,11
-    CONTROL         "自动登录",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,61,81,48,10
-    CONTROL         "记住密码",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,115,81,48,10
-    CONTROL         "",IDC_STATIC,"Static",SS_BLACKFRAME | SS_SUNKEN,169,3,1,92
-    DEFPUSHBUTTON   "登录",IDOK,171,37,60,32
-    PUSHBUTTON      "取消",IDCANCEL,203,73,28,23
-    LTEXT           "注册新账号",IDC_STATIC,173,3,48,12
-    LTEXT           "忘记密码？",IDC_STATIC,173,19,49,12
-    ICON            IDR_MAINFRAME,IDC_STATIC,17,11,20,20
-    ICON            IDI_ICON_HELLO,IDC_STATIC,80,10,20,20
+    EDITTEXT        IDC_EDIT4,44,28,111,14,ES_AUTOHSCROLL
+    LTEXT           "账号：",IDC_STATIC,3,29,38,11
+    EDITTEXT        IDC_EDIT1,44,44,111,14,ES_PASSWORD | ES_AUTOHSCROLL
+    LTEXT           "密码：",IDC_STATIC,3,47,38,11
+    CONTROL         "自动登录",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,57,63,48,10
+    CONTROL         "记住密码",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,111,63,50,10
+    CONTROL         "",IDC_STATIC,"Static",SS_BLACKFRAME | SS_SUNKEN,159,3,1,92
+    DEFPUSHBUTTON   "登录",IDOK,164,28,60,32
+    PUSHBUTTON      "取消",IDCANCEL,194,72,30,23
+    LTEXT           "注册新账号",IDC_STATIC,166,3,48,9
+    LTEXT           "忘记密码？",IDC_STATIC,166,14,49,9
+    ICON            IDR_MAINFRAME,IDC_STATIC,19,3,21,20
+    ICON            IDI_ICON_HELLO,IDC_STATIC,79,3,21,20
+    LTEXT           "请输入账号和密码 ...",IDC_STATIC_LOGON_PROMPT,3,83,152,12,SS_CENTERIMAGE
 END
 
 IDD_FILE_SHARE DIALOGEX 0, 0, 284, 188
@@ -163,6 +164,14 @@ BEGIN
     PUSHBUTTON      "Button3",IDC_BUTTON5,3,32,50,14
     PUSHBUTTON      "Button3",IDC_BUTTON6,3,46,50,14
     PUSHBUTTON      "Button3",IDC_BUTTON7,3,61,50,14
+END
+
+IDD_GET_MEMBERS_PROGRESS DIALOGEX 0, 0, 165, 30
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_BORDER | WS_SYSMENU
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_PRGS_GET_MEMBERS,"msctls_progress32",WS_BORDER | 0x1,3,3,159,13
+    LTEXT           "初始化聊天室 ...",IDC_STATIC,3,16,159,10,SS_CENTERIMAGE
 END
 
 
@@ -232,7 +241,7 @@ BEGIN
     IDD_LOGON, DIALOG
     BEGIN
         LEFTMARGIN, 3
-        RIGHTMARGIN, 231
+        RIGHTMARGIN, 224
         TOPMARGIN, 3
         BOTTOMMARGIN, 95
     END
@@ -251,6 +260,14 @@ BEGIN
         RIGHTMARGIN, 294
         TOPMARGIN, 3
         BOTTOMMARGIN, 202
+    END
+
+    IDD_GET_MEMBERS_PROGRESS, DIALOG
+    BEGIN
+        LEFTMARGIN, 3
+        RIGHTMARGIN, 162
+        TOPMARGIN, 3
+        BOTTOMMARGIN, 27
     END
 END
 #endif    // APSTUDIO_INVOKED
