--- a/ChatRoom/TimberWolf/TimberWolf/TimberWolf/TimberWolf.vcproj
+++ b/ChatRoom/TimberWolf/TimberWolf/TimberWolf/TimberWolf.vcproj
@@ -194,6 +194,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\GetMembersPrgsDlg.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\LogonDlg.cpp"
 				>
 			</File>
@@ -249,6 +253,10 @@
 			>
 			<File
 				RelativePath=".\FileShareDlg.h"
+				>
+			</File>
+			<File
+				RelativePath=".\GetMembersPrgsDlg.h"
 				>
 			</File>
 			<File
