--- a/VHD/VHDServices/VHDServices.vcxproj
+++ b/VHD/VHDServices/VHDServices.vcxproj
@@ -75,11 +75,15 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ProcessBridge.h" />
+    <ClInclude Include="SerialBuffer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VHDManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ProcessBridge.cpp" />
+    <ClCompile Include="SerialBuffer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
