--- a/GamePlugin/DetHookDll/DetTestHook.vcproj
+++ b/GamePlugin/DetHookDll/DetTestHook.vcproj
@@ -196,6 +196,10 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\LDasm.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
@@ -212,6 +216,10 @@
 			</File>
 			<File
 				RelativePath=".\dream_anticrack.h"
+				>
+			</File>
+			<File
+				RelativePath=".\LDasm.h"
 				>
 			</File>
 			<File
@@ -264,6 +272,14 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+		</Filter>
+		<Filter
+			Name="SuperHook"
+			>
+			<File
+				RelativePath=".\SuperHook\VsyAlmightySupHookSDK.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
