--- a/VHD/Client/Client.rc
+++ b/VHD/Client/Client.rc
@@ -82,18 +82,30 @@ BEGIN
     DEFPUSHBUTTON   "确定",IDOK,178,7,50,16,WS_GROUP
 END
 
-IDD_CLIENT_DIALOG DIALOGEX 0, 0, 374, 201
+IDD_CLIENT_DIALOG DIALOGEX 0, 0, 374, 93
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Client"
 FONT 9, "宋体", 0, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDIT_FILE,7,19,302,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "浏览",IDC_BUTTON_SELECT,316,17,50,18
-    LTEXT           "静态",IDC_STATIC,7,7,66,8
-    PUSHBUTTON      "Button2",IDC_BTN_MOUNT,19,93,59,22
-    CONTROL         "开机时自动挂载",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,259,98,70,10
-    PUSHBUTTON      "Button3",IDC_BTN_TESTSEND,233,145,50,14
+    EDITTEXT        IDC_EDIT_FILE,7,21,302,14,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "VHD文件路径：",IDC_STATIC,7,7,66,8
+    PUSHBUTTON      "挂载",IDC_BTN_MOUNT,42,45,86,32
+    CONTROL         "系统启动时自动挂载",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,142,55,95,10
+    PUSHBUTTON      "浏览",IDC_BUTTON_SELECT,315,18,50,19
+    PUSHBUTTON      "加密当前目录下的VHD文件",IDC_BUTTON1,245,41,108,21
+    PUSHBUTTON      "解密当前目录下的VHD文件",IDC_BUTTON2,246,65,108,21
+END
+
+IDD_DIALOG1 DIALOGEX 0, 0, 186, 93
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "确定",IDOK,57,72,50,14
+    PUSHBUTTON      "取消",IDCANCEL,112,72,50,14
+    EDITTEXT        IDC_EDIT1,44,38,128,14,ES_PASSWORD | ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT2,45,17,127,14,ES_PASSWORD | ES_AUTOHSCROLL
 END
 
 
@@ -157,7 +169,15 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 367
         TOPMARGIN, 7
-        BOTTOMMARGIN, 194
+        BOTTOMMARGIN, 86
+    END
+
+    IDD_DIALOG1, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 86
     END
 END
 #endif    // APSTUDIO_INVOKED
